--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
     "flowbite-react": "^0.6.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-calendar": "^4.7.0",
     "react-chartjs-2": "^5.2.0",
